--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@openai/chatkit-react": ">=1.1.1 <2.0.0",
     "next": "^15.5.4",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "katex": "^0.16.11"
   },
   "optionalDependencies": {
     "lightningcss-linux-x64-gnu": "1.30.1",
