--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,13 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+  "next-env.d.ts",
+  "**/*.ts",
+  "**/*.tsx",
+  "**/*.d.ts",
+  ".next/types/**/*.ts",
+  "types/**/*.d.ts"
+],
   "exclude": ["node_modules"]
 }
